# openapi-codegen

./: Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs  serializer.rs
cli/src/serializers/: mod.rs
ir/: Cargo.toml
ir/src/: lib.rs  model.rs  parser.rs  serializer.rs
openapiv3-adapter/: Cargo.toml
openapiv3-adapter/src/: lib.rs  parser.rs
openapiv3-adapter/src/builders/: function_builder.rs  interface_builder.rs  mod.rs  schema_utils.rs
src/: error.rs  parser.rs
src/serializers/: golang.rs
test/fixtures/: openapi-spec.yaml
