[package]
name = "openapi-codegen"
version = "0.1.0"
edition = "2024"
authors = ["flejz <flejz@protonmail.com>"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap", "clap-parse"] }
indexmap = "2.11.4"
openapiv3 = "2.2.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
