[workspace]
members = ["cli", "ir", "openapiv3-adapter"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["flejz <flejz@protonmail.com>"]

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34-deprecated"
thiserror = "2"
