[package]
name = "openapi-codegen"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.49", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap", "clap-parse"] }
indexmap = "2.11.4"
ir = { path = "../ir" }
openapiv3 = "2.2.0"
regex = "1.12.2"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
