[package]
name = "openapiv3-adapter"
version.workspace = true
edition.workspace = true

[dependencies]
Inflector = "0.11.4"
anyhow.workspace = true
ir = { path = "../ir" }
openapiv3 = "2.2.0"
regex = "1.12.2"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
